# t3

./: .gitignore  Makefile  pyproject.toml
src/t3/: cli.py  main.py
