[project]
name = "t3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "things-py>=0.0.15",
]

[dependency-groups]
dev = [
    "nuitka>=2.7.13",
]

[project.scripts]
t3 = "t3.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/t3"]
